website/websites/gp4/code/regexdna-scala.log
BUILD COMMANDS FOR: regexdna.scala

Wed Mar 21 11:47:14 PDT 2007

( if [ ! -d regexdna.scala_run ] ; then mkdir regexdna.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/regexdna/regexdna.scala regexdna.scala_run/regexdna.scala
( cd regexdna.scala_run ; /opt/scala-2.4.0/bin/scalac regexdna.scala )
regexdna.scala:36: error: value println is not a member of object java.io.Console
         Console.println(v + " " + count)
                ^
regexdna.scala:61: error: value println is not a member of object java.io.Console
      Console.println("\n" + initialLength + "\n" + codeLength + "\n" + sequence.length)
             ^
two errors found
make[3]: [regexdna.scala_run] Error 1 (ignored)
touch regexdna.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath regexdna.scala_run regexdna %A
************************************************************
*   TEST (regexdna.scala_run) FAILED - ERROR:  regexdna.scala_out differs from Output.100000
************************************************************
-rw-r--r-- 1 dunham users 278 Nov 13  2005 Output.100000
-rw-r--r-- 1 dunham users  23 Mar 21 11:47 regexdna.scala_out


PROGRAM OUTPUT
==============
no such file: regexdna
